# backend/src/samplespace/routers/__init__.py
@@ -1,2 +1,3 @@
+from .agent import agent_router as agent_router
 from .health import health_router as health_router
 from .samples import samples_router as samples_router
